# batch-spider

./: .gitignore  README.MD  pyproject.toml  setup.py
batch_spider/: setting.py  util.py
batch_spider/db/: __init__.py  db.py  db_mysql.py  db_oracle.py
batch_spider/documents/: complex_downloader.py  sample_batch_spider.py  sample_db.py  sample_db_mysql.py  sample_downloader.py  sample_proxy.py  sample_spider.py
batch_spider/network/: downloader.py  proxy.py  sample_request.py  sample_response.py
batch_spider/network/user_agent_files/: compatible.txt  ios.txt  linux.txt  mac.txt
batch_spider/share/: README.md  util.py
batch_spider/share/db/: __init__.py  db.py  db_mysql.py  db_oracle.py
batch_spider/share/network/: proxy.py
batch_spider/share/utils/: log.py
batch_spider/share/utils/requests/: __init__.py
batch_spider/spiders/: __init__.py  base.py  batch_spider.py
batch_spider/utils/: log.py
spider/: setting.py  util.py
spider/db/: __init__.py  db_mysql.py  db_oracle.py
spider/documents/: complex_downloader.py  sample_batch_spider.py  sample_db.py  sample_db_mysql.py  sample_downloader.py  sample_proxy.py  sample_spider.py
spider/network/: downloader.py  geventcurl.py  proxy.py  sample_response.py
spider/network/user_agent_files/: android.txt  windows.txt
spider/share/: util.py
spider/share/db/: __init__.py  db_mysql.py  db_oracle.py
spider/share/network/: .gitignore  proxy.py
spider/share/utils/: log.py
spider/spiders/: __init__.py  base.py  batch_spider.py
spider/utils/: log.py
