[tool.poetry]
name = "batch-spider"
version = "0.1.0"
description = ""
authors = ["Dytttf <1821367759@qq.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.0"
gevent = "^20.9.0"
pymysql = "^0.10.1"
redis = "^3.5.3"
requests-ftp = "^0.3.1"
hyper = {git = "https://github.com/python-hyper/hyper.git", rev = "18b629b8487169870235fe13387e2ae03c178b9f"}
better-exceptions = "^0.2.2"

[tool.poetry.dev-dependencies]
bs4 = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple"
